--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,7 @@
     <body>
         <header class="header">
             <div class="left">
-                <img src="C:\Users\Hp\Documents\CSS\gym webpage\LOGO1.png" alt="">
+                <img src="images\LOGO1.png" alt="">
                 </div>
             <div class="mid">
                 <ul class="navbar">
